user 1 commit over user 2 content

--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -5,7 +5,10 @@
 				<Page id="page" title="{i18n>title}">
 					<content>  
 					<!--commit 1 remote user1-->
+
 					<!--commit 2 remote user2-->
+					<!--commit 2 remote user1-->
+
 					</content>
 				</Page>
 			</pages>
